# emx-pmux

./: .gitignore  Cargo.toml  README.md  USAGE.md
.claude/: settings.local.json
docs/: analysis-dataflow-and-bugs.md  known-limitations.md
src/: cli.rs  client.rs  consts.rs  daemon.rs  escape.rs  ipc.rs  lib.rs  log.rs  main.rs  platform.rs  pty.rs  screen.rs  server.rs  session.rs  terminal.rs
src/escape/: tests.rs
src/ipc/: tests.rs
src/platform/: posix.rs  windows.rs
src/pty/: error.rs  mod.rs  unix.rs  windows.rs
src/screen/: tests.rs
