[package]
name = "pmux"
version = "0.1.0"
edition = "2021"
authors = ["emx"]
description = "A terminal multiplexer for Windows, inspired by tmux and screen"
license = "MIT"
repository = "https://github.com/emx/pmux"
readme = "README.md"

[lib]
name = "pmux"
path = "src/lib.rs"

[[bin]]
name = "pmux"
path = "src/main.rs"

[dependencies]
# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "fs", "signal"] }

# Optional: for UUID generation (can be replaced with simpler impl)
uuid = { version = "1", optional = true }
