[package]
name = "pmux"
version = "0.4.0"
edition = "2021"
authors = ["emx"]
description = "A cross-platform terminal multiplexer with PTY management"
license = "MIT"

[lib]
name = "pmux"
path = "src/lib.rs"

[[bin]]
name = "pmux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vte = "0.13"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["process", "termios", "pty", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
] }
